--- a/TFG-SmarthomeAPP/app/src/main/res/values/strings.xml
+++ b/TFG-SmarthomeAPP/app/src/main/res/values/strings.xml
@@ -7,11 +7,13 @@
     <string name="exit_app">Exit</string>
     <string name="tfg_title">FPW - Introducing aspects of geolocation in a smarthome</string>
     <string name="about">About us</string>
+    <string name="logout">Log out</string>
     <string name="about_text"></string>
     <string name="author">Author: Lorena Calabuig Monerris</string>
     <string name="tutor">Tutor: Joan Josep Fons Cors</string>
     <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
+    <string name="gps">Please, enable the GPS</string>
+
 
     <!-- Strings for LoginActivity -->
     <string name="title_activity_login">Register</string>
