--- a/TFG-SmarthomeAPP/app/src/main/res/values-es/strings.xml
+++ b/TFG-SmarthomeAPP/app/src/main/res/values-es/strings.xml
@@ -4,24 +4,30 @@
 
 <resources>
 
-    <string name="app_name">TFG-SmarthomeApp</string>
+    <string name="app_name">My SmartHome</string>
+
+    <!-- Strings for MenuActivity -->
     <string name="init_app">Iniciar Aplicación</string>
     <string name="exit_app">Salir</string>
     <string name="tfg_title">TFG - Introducción de aspectos de geolocalicación en una vivienda inteligente</string>
-    <string name="about_text">Esta aplicación ha sido desarrollada como parte del Trabajo de Final de
-    Grado de "Introducción a aspectos de geolocalización en una vivienda inteligente"</string>
-    <string name="author">Autor: Lorena Calabuig Monerris</string>
-    <string name="tutor">Tutor: Joan Josep Fons Cors</string>
+
+    <!-- Strings for MainActivity -->
     <string name="ip">IP pública</string>
-    <string name="about">Acerca de</string>
-    <string name="logout">Cerrar sesión</string>
     <string name="gps">Por favor, activa el GPS</string>
 
-    <!-- Strings for LoginActivity -->
+    <!-- Strings for Login/LogoutActivity -->
     <string name="title_activity_login">Registro</string>
     <string name="username">Nombre de usuario</string>
     <string name="password">Contraseña</string>
     <string name="register">Registrarse</string>
+    <string name="logout">Cerrar sesión</string>
+
+    <!-- Strings for AboutUsActivity -->
+    <string name="about">Acerca de</string>
+    <string name="about_text">Esta aplicación ha sido desarrollada como parte del Trabajo de Final de
+    Grado de "Introducción a aspectos de geolocalización en una vivienda inteligente"</string>
+    <string name="author">Autor: Lorena Calabuig Monerris</string>
+    <string name="tutor">Tutor: Joan Josep Fons Cors</string>
 
 
 </resources>
