--- a/TFG-SmarthomeAPP/app/src/main/res/values-es/strings.xml
+++ b/TFG-SmarthomeAPP/app/src/main/res/values-es/strings.xml
@@ -14,6 +14,7 @@
     <!-- Strings for MainActivity -->
     <string name="ip">IP pública</string>
     <string name="gps">Por favor, activa el GPS</string>
+    <string name="home">Casa</string>
 
     <!-- Strings for Login/LogoutActivity -->
     <string name="title_activity_login">Registro</string>
