--- a/TFG-SmarthomeAPP/app/src/main/res/values/strings.xml
+++ b/TFG-SmarthomeAPP/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
 
     <!-- Strings for MainActivity -->
     <string name="gps">Please, enable the GPS</string>
-
+    <string name="home">Home</string>
 
     <!-- Strings for Login/LogoutActivity -->
     <string name="title_activity_login">Register</string>
@@ -27,5 +27,10 @@
     "Introducing aspects of geolocation in a smarthome"</string>
     <string name="author">Author: Lorena Calabuig Monerris</string>
     <string name="tutor">Tutor: Joan Josep Fons Cors</string>
+    <string name="title_activity_main_activity2">MainActivity2</string>
+    <string name="hello_world">Hello world!</string>
+    <string name="action_settings">Settings</string>
+    <string name="title_activity_room_list">RoomListActivity</string>
+    <string name="title_activity_rooms_list">RoomsListActivity</string>
 
 </resources>
