--- a/TFG-SmarthomeAPP/app/src/main/res/values/strings.xml
+++ b/TFG-SmarthomeAPP/app/src/main/res/values/strings.xml
@@ -21,6 +21,10 @@
     <string name="title_activity_logout">LogoutActivity</string>
     <string name="logout">Log out</string>
 
+    <!-- Strings for ShoppingListActivity -->
+    <string name="addItem">Add</string>
+    <string name="shoppingList">Shopping list</string>
+
     <!-- Strings for AboutUsActivity -->
     <string name="about">About us</string>
     <string name="about_text">This application have been developed as part of the Final Degree Work of
@@ -30,7 +34,6 @@
     <string name="title_activity_main_activity2">MainActivity2</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_room_list">RoomListActivity</string>
-    <string name="title_activity_rooms_list">RoomsListActivity</string>
+    <string name="title_activity_example_places">ExamplePlacesActivity</string>
 
 </resources>
